# kursovaya5

./: .gitignore  README.md  main.py  pyproject.toml
src/: api.py  dbmanager.py  utils.py  vacancy.py
